x.y.z
=====

Release date:

New features:

Bug fixes:

* Fix GitHub issue #224: Tests fail when compiled with UBSan

Other:

* Add timestamp to log file name

3.6.1
=====

Release date:

Wed, 21 Sep 2022 18:26:35 -0000

Bug fixes:

* Fix shadow effect of edge label when edge is selected

* Fix edge label not deleted together with the edge

* Fix edge context menu not opening when edge text edit right-clicked

Other:

* constants.hpp: added <qreal> to QVector so that the compiler wouldn't throw an error

3.6.0
=====

Release date:

Sat, 27 Aug 2022 19:03:46 +0300

New features:

* Usability improvements:
  - Show a dummy edge label with '...' when the actual label won't fit
  - Stack edge text edits on top of nodes

3.5.0
=====

Release date:

Sat, 30 Jul 2022 21:12:12 +0300

New features:

* Fix GitHub Issue #112: Optimizer: Take current node locations into account when building initial layout
  - This change makes the optimizer way more stable with respect to the original global placement
  - Tries to find the best possible initial locations for the nodes in a normalized coordinate space
  - Makes only local changes within a very small search radius (row-wise and cell-wise)

Other:

* Update German translations

* Update Dutch translations

3.4.0
=====

Release date:

Sun, 26 Jun 2022 21:42:11 +0300

New features:

* Fetch the newest version and show in status bar if newer version available

* Fix GitHub Issue #210: Option to set shadow offset and disable shadows
  - Adds effects tab to the settings dialog
  - Shadow offset and blur radius can now be set

* Fix GitHub Issue #211: Color defaults
  - Default colors can now be set via the default settings tab

* Make it possible to tune shadow colors via the effects tab

3.3.0
=====

Release date:

Thu, 12 May 2022 21:09:29 +0300

New features:

* Add German translations

* Fix GitHub Issue #206: An option to change the size of the arrows
  - Toolbar now includes a spinner widget to set the arrow size

Bug fixes:
